pushing differnet js functions

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
                     <li>Berlin, Germany</li>
                 </ul>
                 <ul id="items">
-                    <li>Home</li>
-                    <li>Projects</li>
+                    <li id="home">Home</li>
+                    <li id="projects-btn">Projects</li>
                     <li>About</li>
                     <li>Contact</li>
                 </ul>
             </div>
         </nav>
     </header>
-    <main>
+    <main id="main-container">
         <video autoplay muted loop id="myVideo">
             <source src="assets/videos/3138850444.mp4" type="video/mp4">
         </video>
@@ -146,6 +146,6 @@
             </form>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
-
 </html>
