--- a/index.html
+++ b/index.html
@@ -146,6 +146,6 @@
             </form>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
