add icons to social media div

--- a/index.html
+++ b/index.html
@@ -171,10 +171,15 @@
             <h2>Would you like to connect with me?</h2>
             <div class="flex-divs">
                 <div class="social-media">
-                    <h2>Linkedin</h2>
+                    <div class="linkedin">
+                        <i class="fa-brands fa-linkedin"></i>
+                        <h2>Linkedin</h2>
+                    </div>
                     <br>
-                    <h2>Github</h2>
-                    <p></p>
+                    <div class="github">
+                        <i class="fa-brands fa-github"></i>
+                        <h2>Github</h2>
+                    </div>
                 </div>
                 <div class="contact-form">
                     <h2>How to Contact Me</h2>
