--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@
                 <div class="social-media">
                     <div class="linkedin">
                         <i class="fa-brands fa-linkedin"></i>
-                        <h2>Linkedin</h2>
+                        <a href="https://www.linkedin.com/in/carolina-santos-carneiro/"><h2>Linkedin</h2></a>
                     </div>
                     <br>
                     <div class="github">
                         <i class="fa-brands fa-github"></i>
-                        <h2>Github</h2>
+                        <a href="https://github.com/carolinascarneiro"><h2>Github</h2></a>
                     </div>
                 </div>
                 <div class="contact-form">
