added hover effect to links in social media div

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <div class="social-media">
                     <div class="linkedin">
                         <i class="fa-brands fa-linkedin"></i>
-                        <a href="https://www.linkedin.com/in/carolina-santos-carneiro/"><h2>Linkedin</h2></a>
+                        <a href="https://www.linkedin.com/in/carolina-santos-carneiro/"><h2 id="linkedina">Linkedin</h2></a>
                     </div>
                     <br>
                     <div class="github">
