add my cv for download into the about section

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                     <br>🎸🪘🎤
                     Very much into music making and producing
                 </p>
+                <a href="/assets/docs/Resume-Carolina-Carneiro (1).pdf" download>Download my CV</a>
             </div>
         </div>
 
