fixed dotnet icon

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <h3>Back-End</h3>
                             <div class="m365-backend">
                                 <img src="./assets/images/003-c-logo.png" alt="" id="csharp">
-                                <img src="./assets/images/Meu projeto.png" alt="" id="efcore">
+                                <img src="./assets/images/Frame_1-removebg-preview.png" alt="" id="efcore">
                             </div>
                         </div>
                     </div>
