centered project div and added links to github projects

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
             </div>
 
-            <div class="m365-text">
+            <div class="m365-text" id="text">
                 <div class="m365-description">
                     <h2>Description</h2>
                     <p>In this project, my team and I were supposed to develop a web application which serves as a
@@ -124,7 +124,10 @@
                         <!-- <a href="https://carolinascarneiro.github.io/alt-bike-hp/"><h2>Live Website</h2></a> -->
                     </div>
                     <a href="https://carolinascarneiro.github.io/alt-bike-hp/">
-                        <h2>Live Website</h2>
+                        <h3>Live Website</h3>
+                    </a>
+                    <a href="https://github.com/carolinascarneiro/alt-bike-hp">
+                        <h3>Github Repository</h3>
                     </a>
                 </div>
             </div>
