fixed contact me div

--- a/index.html
+++ b/index.html
@@ -87,8 +87,6 @@
                 </div>
             </div>
 
-
-
             <!-- end alt bike project -->
         </div>
 
@@ -177,20 +175,29 @@
                 <div class="social-media">
                     <div class="linkedin">
                         <i class="fa-brands fa-linkedin"></i>
-                        <a href="https://www.linkedin.com/in/carolina-santos-carneiro/"><h2 id="linkedina">Linkedin</h2></a>
+                        <a href="https://www.linkedin.com/in/carolina-santos-carneiro/">
+                            <h2 id="linkedina">Linkedin</h2>
+                        </a>
                     </div>
                     <br>
                     <div class="github">
                         <i class="fa-brands fa-github"></i>
-                        <a href="https://github.com/carolinascarneiro"><h2>Github</h2></a>
+                        <a href="https://github.com/carolinascarneiro">
+                            <h2>Github</h2>
+                        </a>
                     </div>
                 </div>
                 <div class="contact-form">
                     <h2>How to Contact Me</h2>
-                    <form>
-                        <label for="email-input">Please write your message here</label>
-                        <textarea id="email-input" rows="10"></textarea>
-                    </form>
+                    <div class="form">
+                        <form>
+                            <label for="email-input">Please insert your e-mail here:</label><br>
+                            <input type="text" id="email-input"><br>
+                            <label for="email-input">Please write your message here:</label>
+                            <textarea id="email-input" rows="5"></textarea><br>
+                            <input type="submit">
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
