--- a/index.html
+++ b/index.html
@@ -121,12 +121,14 @@
                         </div> -->
                         <!-- <a href="https://carolinascarneiro.github.io/alt-bike-hp/"><h2>Live Website</h2></a> -->
                     </div>
-                    <a href="https://carolinascarneiro.github.io/alt-bike-hp/">
-                        <h3>Live Website</h3>
-                    </a>
-                    <a href="https://github.com/carolinascarneiro/alt-bike-hp">
-                        <h3>Github Repository</h3>
-                    </a>
+                    <div class="buttons">
+                        <a href="https://carolinascarneiro.github.io/alt-bike-hp/">
+                            <h3>Live Website</h3>
+                        </a>
+                        <a href="https://github.com/carolinascarneiro/alt-bike-hp">
+                            <h3>Github Repository</h3>
+                        </a>
+                    </div>
                 </div>
             </div>
 
@@ -174,16 +176,14 @@
             <div class="flex-divs">
                 <div class="social-media">
                     <div class="linkedin">
-                        <i class="fa-brands fa-linkedin"></i>
                         <a href="https://www.linkedin.com/in/carolina-santos-carneiro/">
-                            <h2 id="linkedina">Linkedin</h2>
+                            <i class="fa-brands fa-linkedin"></i><h2 id="linkedina">Linkedin</h2>
                         </a>
                     </div>
                     <br>
                     <div class="github">
-                        <i class="fa-brands fa-github"></i>
                         <a href="https://github.com/carolinascarneiro">
-                            <h2>Github</h2>
+                            <i class="fa-brands fa-github"></i><h2>Github</h2>
                         </a>
                     </div>
                 </div>
