fixed target attribute and added links to projects

--- a/index.html
+++ b/index.html
@@ -47,15 +47,17 @@
         <!-- Projects Div -->
         <!-- <h2>Work</h2> -->
         <div class="projects" id="projs">
-            <div class="carousel-wrapper">
-                <div class="carousel-container">
-                    <div class="carousel">
-                        <div class="image-one"></div>
-                        <div class="image-two"></div>
-                        <div class="image-three"></div>
+            <a href="https://m365kaffeepause.de/" target=”_blank”>
+                <div class="carousel-wrapper">
+                    <div class="carousel-container">
+                        <div class="carousel">
+                            <div class="image-one"></div>
+                            <div class="image-two"></div>
+                            <div class="image-three"></div>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </a>
 
             <div class="m365-text" id="text">
                 <div class="m365-description">
@@ -112,35 +114,29 @@
                                 <i class="fa-brands fa-js" id="ic6"></i>
                             </div>
                         </div>
-                        <!-- <div class="altbikebe">
-                            <h3>Back-End</h3>
-                            <div class="altbike-backend">
-                                <img src="./assets/images/c-sharp.png" alt="" srcset="" id="csharp">
-                                <img src="./assets/images/efcore-removebg-preview.png" alt="" srcset="" id="efcore">
-                            </div>
-                        </div> -->
-                        <!-- <a href="https://carolinascarneiro.github.io/alt-bike-hp/"><h2>Live Website</h2></a> -->
                     </div>
                     <div class="buttons">
-                        <a href="https://carolinascarneiro.github.io/alt-bike-hp/">
+                        <a href="https://carolinascarneiro.github.io/alt-bike-hp/" target=”_blank”>
                             <h3>Live Website</h3>
                         </a>
-                        <a href="https://github.com/carolinascarneiro/alt-bike-hp">
+                        <a href="https://github.com/carolinascarneiro/alt-bike-hp" target=”_blank”>
                             <h3>Github Repository</h3>
                         </a>
                     </div>
                 </div>
             </div>
 
-            <div class="carousel1-wrapper">
-                <div class="carousel1-container">
-                    <div class="carousel1">
-                        <div class="image-one1"></div>
-                        <div class="image-two1"></div>
-                        <div class="image-three1"></div>
+            <a href="https://carolinascarneiro.github.io/alt-bike-hp/" target=”_blank”>
+                <div class="carousel1-wrapper">
+                    <div class="carousel1-container">
+                        <div class="carousel1">
+                            <div class="image-one1"></div>
+                            <div class="image-two1"></div>
+                            <div class="image-three1"></div>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </a>
 
         </div>
         <!-- end alt bike project -->
@@ -176,14 +172,16 @@
             <div class="flex-divs">
                 <div class="social-media">
                     <div class="linkedin">
-                        <a href="https://www.linkedin.com/in/carolina-santos-carneiro/">
-                            <i class="fa-brands fa-linkedin"></i><h2 id="linkedina">Linkedin</h2>
+                        <a href="https://www.linkedin.com/in/carolina-santos-carneiro/" target=”_blank”>
+                            <i class="fa-brands fa-linkedin"></i>
+                            <h2 id="linkedina">Linkedin</h2>
                         </a>
                     </div>
                     <br>
                     <div class="github">
-                        <a href="https://github.com/carolinascarneiro">
-                            <i class="fa-brands fa-github"></i><h2>Github</h2>
+                        <a href="https://github.com/carolinascarneiro" target=”_blank”>
+                            <i class="fa-brands fa-github"></i>
+                            <h2>Github</h2>
                         </a>
                     </div>
                 </div>
