fixed alt-bike text

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
             <div class="altbike-text">
                 <div class="altbike-description">
                     <h2>Description</h2>
-                    <p>The idea of this project was to create an imaginary company that sold whatever I wished. Since
-                        I'm a bike lover, I created alt bike. The logo, the idea, the colors, everything was my idea.
+                    <p>
+                        For this project I came up with an idea for a company and had to think not only about the product, but also the whole design. Technically I went for Flexboxes to help me organize the content. The website is also adapted for tablets and mobile gadgets.
                     </p>
                 </div>
 
