adding new colors and new spacings

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="lists">
                 <ul>
                     <li>Full-Stack Development</li>
-                    <li>At itacs</li>
+                    <li>@ itacs</li>
                     <li>Berlin, Germany</li>
                 </ul>
                 <ul id="items">
@@ -81,7 +81,7 @@
                         <div class="m365be">
                             <h3>Back-End</h3>
                             <div class="m365-backend">
-                                <img src="./assets/images/003-c-logo.png" alt="" id="csharp">
+                                <img src="./assets/images/Frame 3.png" alt="" id="csharp">
                                 <img src="./assets/images/Frame_1-removebg-preview.png" alt="" id="efcore">
                             </div>
                         </div>
@@ -162,6 +162,7 @@
                     <br>🎸🪘🎤
                     Very much into music making and producing
                 </p>
+                <br>
                 <a href="/assets/docs/Resume-Carolina-Carneiro (1).pdf" download>Download my CV</a>
             </div>
         </div>
@@ -170,6 +171,33 @@
         <div class="contact" id="contact">
             <h2>Would you like to connect with me?</h2>
             <div class="flex-divs">
+                <!-- <div class="social-media">
+                    <div class="linkedin">
+                        <a href="https://www.linkedin.com/in/carolina-santos-carneiro/" target=”_blank”>
+                            <i class="fa-brands fa-linkedin"></i>
+                            <h2 id="linkedina">Linkedin</h2>
+                        </a>
+                    </div>
+                    <br>
+                    <div class="github">
+                        <a href="https://github.com/carolinascarneiro" target=”_blank”>
+                            <i class="fa-brands fa-github"></i>
+                            <h2>Github</h2>
+                        </a>
+                    </div>
+                </div> -->
+                <div class="contact-form">
+                    <div class="form">
+                        <form>
+                            <label for="email-input">Your E-mail:</label><br>
+                            <input type="text" id="email-input"><br>
+                            <label for="email-input">Your Message:</label>
+                            <textarea id="email-input" rows="12"></textarea><br>
+                            <input type="submit" name="form" value="Connect" id="connect">
+                        </form>
+                    </div>
+                </div>
+                <br>
                 <div class="social-media">
                     <div class="linkedin">
                         <a href="https://www.linkedin.com/in/carolina-santos-carneiro/" target=”_blank”>
@@ -185,18 +213,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="contact-form">
-                    <h2>How to Contact Me</h2>
-                    <div class="form">
-                        <form>
-                            <label for="email-input">Please insert your e-mail here:</label><br>
-                            <input type="text" id="email-input"><br>
-                            <label for="email-input">Please write your message here:</label>
-                            <textarea id="email-input" rows="5"></textarea><br>
-                            <input type="submit">
-                        </form>
-                    </div>
-                </div>
+                <br>
             </div>
         </div>
     </main>
