remove borders and change colors

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <!-- Contact -->
         <div class="contact" id="contact">
             <h2>Would you like to connect with me?</h2>
-            <div class="flex-divs">
+            <!-- <div class="flex-divs"> -->
                 <!-- <div class="social-media">
                     <div class="linkedin">
                         <a href="https://www.linkedin.com/in/carolina-santos-carneiro/" target=”_blank”>
@@ -190,7 +190,7 @@
                     <div class="form">
                         <form>
                             <label for="email-input">Your E-mail:</label><br>
-                            <input type="text" id="email-input"><br>
+                            <input type="email" id="email-input"><br>
                             <label for="email-input">Your Message:</label>
                             <textarea id="email-input" rows="12"></textarea><br>
                             <input type="submit" name="form" value="Connect" id="connect">
