--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                         <div class="m365be">
                             <h3>Back-End</h3>
                             <div class="m365-backend">
-                                <img src="./assets/images/Frame 3.png" alt="" id="csharp">
-                                <img src="./assets/images/Frame_1-removebg-preview.png" alt="" id="efcore">
+                                <img src="./assets/images/csharp.jpeg" alt="" id="csharp">
+                                <img src="./assets/images/dotnet.jpeg" alt="" id="efcore">
                             </div>
                         </div>
                     </div>
