--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </video>
 
             <div class="typewriter">
-                <div class="typewriter-text">Hello, I'm Carolina, a Full-Stack Developer.</div>
+                <div class="typewriter-text">Welcome! I'm Carolina, a Full-Stack Web Developer.</div>
             </div>
         </div>
 
